# UrbanFly

./: README.md
Mapping/: README.md  airsim_ros_wrapper_changes.patch  vins_mono_changes.patch
Mapping/SquareStreet/benchmark_publisher/config/minihattan/: data.csv
Mapping/SquareStreet/benchmark_publisher/src/: benchmark_publisher_node.cpp
Mapping/SquareStreet/data/: bag_tester.py  depth_results.py  normal_GMM_4_means.txt  offset_GMM_4_covariances.txt  offset_GMM_4_weights.txt  plane_error.txt
Mapping/SquareStreet/data/minihattan/: GMM_3_covariances.txt  GMM_3_means.txt  gt_data.txt  gt_data_tum.txt  plan_draw.py
Mapping/SquareStreet/rpvio_estimator/: CMakeLists.txt
Mapping/SquareStreet/rpvio_estimator/launch/: rpvio_sim.launch
Mapping/SquareStreet/rpvio_estimator/scripts/: Controller.py  Controller_UrbanScence.py  Controller_test.py  Ellipse.py  EstimateParams.py  Keyboard_Control.py  PathController.py  box_world.py  path_commander.py  planner.py
Mapping/SquareStreet/rpvio_estimator/src/: GMM_4_covariances.txt  GMM_4_means.txt  MMD.h  VPDetection.cpp  estimator_node.cpp  feature_manager.cpp  feature_manager.h  mapper_node.cpp  mapper_node_with_depth_overlay.cpp  parameters.cpp  parameters.h
Mapping/SquareStreet/rpvio_estimator/src/factor/: homography_factor.h  incident_plane_factor.h  orthogonal_plane_factor.h
Mapping/SquareStreet/rpvio_estimator/src/planner_scripts/mvn_paths/: CMakeLists.txt
Mapping/SquareStreet/rpvio_estimator/src/utility/: color_ids.h
Mapping/SquareStreet/rpvio_feature_tracker/src/: convexityDefects.cpp  parameters.cpp  parameters.h
Mapping/SquareStreet/scripts/: airsim_flight_path.py  airsim_flight_path_urban_yingrenshi.py  build.sh  convert_vins_to_tum.py  plan_execute_pause.py
Mapping/UrbanScene3D/benchmark_publisher/launch/: publish.launch
Mapping/UrbanScene3D/config/: rpvio_rviz_config.rviz  rpvio_rviz_config2.rviz  rpvio_sim_config.yaml  rpvio_skyline2.rviz
Mapping/UrbanScene3D/data/: Transform.py  error_distro.py  gmm_test.cpp  quant_results.py  samples.txt
Mapping/UrbanScene3D/data/minihattan/: GMM_4_covariances.txt  GMM_4_means.txt  GMM_4_weights.txt  sdf_gmm.py
Mapping/UrbanScene3D/plane_segmentation/plane_recover/: RecoverPlane.py  inference.py
Mapping/UrbanScene3D/plane_segmentation/planercnn/: .gitignore  detect.py  env.yml  evaluate.py  get_mask.ipynb  mask_benchmarking.ipynb  optical_flow.py  optical_flow_runner.py  options.pkl  options.py  plane_segmentation_service_server.py  plane_segmentation_service_server2.py  plane_segmentor.py  python_env.yml  ros_node.py  script.py  utils.py
Mapping/UrbanScene3D/plane_segmentation/planercnn/data/: camera.txt
Mapping/UrbanScene3D/plane_segmentation/planercnn/rpvio_estimator/srv/: _PlaneSegmentation.py  __init__.py
Mapping/UrbanScene3D/plane_segmentation/speedup_exps/optical_flow/: optical_flow_dense.py  optical_flow_sparse.py
Mapping/UrbanScene3D/rpvio_estimator/: CMakeLists.txt  package.xml
Mapping/UrbanScene3D/rpvio_estimator/launch/: rpvio_sim.launch
Mapping/UrbanScene3D/rpvio_estimator/scripts/: controller_test.py  path_commander.py  plane_segmentation_server.py  planner.py  planner_node.py  simple_planner.py
Mapping/UrbanScene3D/rpvio_estimator/src/: GMM_3_weights.txt  OpticalFlowPropagator.cpp  OpticalFlowPropagator.h  Preprocessor.cpp  Preprocessor.h  estimator.cpp  estimator_node.cpp  local_map.cpp  local_map.h  mapper.h  mapper_node.cpp  parameters.cpp  parameters.h  planner.h  planner_node.cpp  preprocessor_node.cpp
Mapping/UrbanScene3D/rpvio_estimator/src/planner_scripts/cuboid_world_planning/: plan_draw.py  stomp_paths.py  test_planner.ipynb
Mapping/UrbanScene3D/rpvio_estimator/src/planner_scripts/mvn_paths/: example.cpp
Mapping/UrbanScene3D/rpvio_estimator/src/utility/: color_ids.h
Mapping/UrbanScene3D/rpvio_estimator/srv/: PlaneSegmentation.srv
Mapping/UrbanScene3D/rpvio_feature_tracker/: CMakeLists.txt
Mapping/UrbanScene3D/rpvio_feature_tracker/src/: color_ids.h  feature_tracker.h
Mapping/UrbanScene3D/scripts/: airsim_flight_path.py  airsim_flight_path_urban_yingrenshi.py  report.txt
Mapping/config/: rpvio_sim_config.yaml  rpvio_skyline2.rviz
Mapping/data/: SquareStreetDemoPath.txt  mask_processor.py  normal_GMM_4_covariances.txt  normal_GMM_4_weights.txt  offset_GMM_4_means.txt  plane_distro.py  ransac_distro.py
Mapping/data/minihattan/: GMM_4_weights.txt  distance_distribution.py  gt_time_syncer.py  histogram_data_0_0.txt  histogram_data_non_gauss_0_0.txt
Mapping/docs/icvgip2021-latex-template/: ICVGIP-Latex-Template.tex  samplebody-conf.tex
Mapping/rpvio_estimator/scripts/: Initilizer.py  KeyboardControl.py  path_commander.py  planner.py  planner_node.py
Mapping/rpvio_estimator/src/: VPDetection.h  estimator.h  mapper.h  mapper_node.cpp  objects.h  vp_utils.h
Mapping/rpvio_estimator/src/planner_scripts/cuboid_world_planning/: uncertain_plane_segs.ipynb
Mapping/rpvio_estimator/src/utility/: visualization.cpp
Mapping/rpvio_feature_tracker/src/: feature_tracker_node.cpp  vp_utils.h
Mapping/scripts/: airsim_flight_path_urban_yingrenshi.py  run_rpvio_sim.sh
UrbanFlyCEMPlanner/: CMakeLists.txt  package.xml
UrbanFlyCEMPlanner/src/: CEM.h  CEM_Polynomial.h  MMD.h  PlannerVins.cpp  STOMP.h  bernstein.h  kinodynamic_astar2.h  kinodynamic_astar_Planar.cpp  objects.h  pcNoise.cpp  planner.h  utilsPlannner.h
UrbanFlyCEMPlanner/src/utility/: visualization.h
